--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   pedantic: ^1.9.0
   fluttertoast: ^7.1.1
+  rxdart: 0.24.1
 
 dev_dependencies:
   flutter_test:
